<resources>
    <string name="app_name">StoreManager</string>

    <string name="internal_storage">Internal storage</string>
    <string name="please_enter_message">please enter message</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="inventory">Inventory</string>
    <string name="job">Jobs</string>
    <string name="product_name">Search by Product Name</string>
    <string name="price">Price</string>
    <string name="pickup_store">Pickup Store</string>
    <string name="destination_store">Destination Store</string>
    <string name="pickup_date">Date</string>
    <string name="assignee">Assignee</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="status">Status</string>
    <string name="pickup_time">Time</string>
    <string name="sku_number">SKU : </string>
    <string name="description">Description</string>
    <string name="quantity">Quantity : </string>
    <string name="dollar">$ </string>
    <string name="menu_home">Home</string>
    <string name="nav_header_title">Android</string>
    <string name="nav_header_subtitle">studio@android.com</string>
    <string name="products_lessthan_5_quantity">Products lessthan 5 quantity</string>
    <string name="profile">Profile</string>
    <string name="add">ADD</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="store_name">Store Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="my_profile">My Profile</string>
</resources>